Add ASR-driven semantic video editing pipeline
Implemented fast local transcription (faster-whisper) with word timestamps and converted transcripts into sentence-level units for safe cut boundaries.

Added semantic scoring over sentence units using embedding-based relevance, redundancy, and filler signals, then introduced a planner that selects keep/cut intervals across the full timeline under coherence constraints.

Extended the pipeline with metadata generation (VAD speech segments + shot boundaries), reference index + retrieval utilities, and improved edit application/export workflow.

Added configs for good refs/targets and prompt scaffolding for vision tagging, plus updated .gitignore to keep raw/derived artifacts out of the repo.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@ __pycache__/
 data/raw/
 data/features/
 outputs/
+data/meta/
+data/transcripts/
+data/units/
+data/scores/
+data/vision/
 
 # OS
 .DS_Store
